# experiments

./: .gitignore  CONTRIBUTING.md  Cargo.toml  HOMEBREW.md  LICENSE  README.md  rustfmt.toml
.github/workflows/: ci.yml  release.yml
homebrew/Formula/: figgit.rb
src/: commands.rs  config.rs  git.rs  main.rs  output.rs
