[package]
name = "figgit"
version = "0.1.0"
edition = "2021"
authors = ["figgit contributors"]
description = "Manage git configurations using workspace names"
readme = "README.md"
repository = "https://github.com/velarno/figgit"
license = "MIT"
keywords = ["git", "configuration", "cli", "workspace", "tool"]
categories = ["command-line-utilities", "development-tools"]

[dependencies]
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"
anyhow = "1.0"
dirs = "5.0"
